--- a/app/assets/css/global.css
+++ b/app/assets/css/global.css
@@ -120,11 +120,16 @@ ul {
 
 /* Conteneur pour les icônes dans l'en-tête */
 .container-icon {
-  width: 10%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+  width: 5%;
+  display: none;
+  justify-content: space-between;
   position: relative;
+}
+
+@media (min-width: 769px) {
+  .container-icon {
+    display: flex;
+  }
 }
 
 /* Menu déroulant dans le profil utilisateur */
@@ -171,7 +176,6 @@ ul {
 
 /* Bouton de connexion */
 .login-button {
-  display: none;
   padding: var(--spacing-xs) var(--spacing-md);
   background-color: var(--accent-color);
   color: white;
@@ -179,6 +183,12 @@ ul {
   border-radius: var(--spacing-xs);
   cursor: pointer;
   text-decoration: none;
+  transition: all .3s ease;
+}
+
+.login-button:hover {
+  color: var(--text-color);
+  background-color: var(--bg-accent-color);
 }
 
 /* Design responsive pour petits écrans */
@@ -202,15 +212,14 @@ ul {
     align-items: center;
     justify-content: center;
     position: absolute;
-    top: 70px;
+    top: 60px;
     right: 0;
     background: var(--bg-color);
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     padding: var(--spacing-sm);
     border-radius: var(--spacing-xs);
     z-index: 1000;
     width: 100%;
-    min-height: 400px;
+    min-height: 100vh;
   }
 
   .link {
