--- a/app/assets/css/global.css
+++ b/app/assets/css/global.css
@@ -120,10 +120,10 @@ ul {
 
 /* Conteneur pour les icônes dans l'en-tête */
 .container-icon {
-  width: 5%;
   display: none;
   justify-content: space-between;
   position: relative;
+  gap: 8px;
 }
 
 @media (min-width: 769px) {
@@ -164,6 +164,7 @@ ul {
 }
 
 .dropdown li {
+  border-radius: 4px;
   padding: var(--spacing-xs);
   cursor: pointer;
   transition: background 0.3s ease, color 0.3s ease;
