--- a/app/assets/css/global.css
+++ b/app/assets/css/global.css
@@ -37,8 +37,15 @@ body {
   background: var(--bg-color);
   color: var(--text-color);
   margin: 0;
-  font-family: "Arial", sans-serif;
   transition: background 0.3s, color 0.3s;
+}
+
+body, p {
+  font-family: 'Roboto', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Montserrat', sans-serif;
 }
 
 /* Listes non ordonnées */
